# slangpy

./: .clang-format  .coderabbit.yaml  .coverage  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  Braindumps.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.MD  CONTRIBUTING.md  DEVELOP.md  MANIFEST.in  PythonClasses.md  README.md  cache-perf.txt  demo_fuser.py  environment.yml  flake.nix  gitlab-ci.yml  history.md  native.md  nsyspython.bat  nvtt_wrapper.h  plan-recording.md  plan-refactor-profiler.md  plan-refactor.md  plan-shader-profile.md  plan-sw-rasterizer.md  plan.md  plan2.md  pyproject.toml  repro.bat  repro.cpp  requirements-dev.txt  requirements-docs.txt  requirements.txt  (+5 more)
.agents/: PLANS.md  append-only-profiler-query-pages.md  split-gpu-query-zone-resolving.md
.agents/agents/: slangpy-api-bindings-reviewer.md  slangpy-build-ci-reviewer.md  slangpy-correctness-reviewer.md  slangpy-functional-api-reviewer.md  slangpy-maintainability-reviewer.md  slangpy-performance-reviewer.md  slangpy-test-reviewer.md
.build_agent/: ci.py
.github/: copilot-instructions.md
.github/instructions/: autograd_native_optimization.instructions.md  benchmarks.instructions.md  torchintegration.instructions.md  value_marshall_optimization.instructions.md
.github/prompts/: plan-consolidateCodeGenTests.prompt.md  plan-extractCodegenToGenerator.prompt.md  plan-simplifyKernelGen-phase1.prompt.md  plan-simplifyKernelGen-phase2.prompt.md  plan-simplifyKernelGen-phase3.prompt.md  plan-simplifyKernelGen.prompt.md  plan-simplifyKernelGenPhase2-cleanup.prompt.md
.github/scripts/: sign_macos_bins.sh
.github/workflows/: backfill-benchmark.yml  checks.yml  ci-benchmark.yml  ci-gcp.yml  ci-latest-slang.yml  ci.yml  diag-gridconst-ac.yml  format-command.yml  gh-bridge-smoke-windows.yml  pre-commit-comment.yml  schedule-benchmarks.yml  slangpy_torch.yml  sync-issues-to-project.yml  wheels-dev.yml  wheels.yml
.plans/: benchmark-action-scheduling.md  benchview-benchmark-submission.md  bindings.md  bindings2.md
.vscode-default/: launch.json
.vscode.default/: settings.json
build_agent/: ci.py
cmake/: FindNVTT.cmake  utils.cmake
copper/: __init__.py  codegen.py  importers.py  invokables.py  printing.py  util.py  variable.py  wrappers.py
copper/layers/: __init__.py  falcor_layer.py  layer_base.py  torch_layer.py
copper/marshalling/: __init__.py  arithmetic.py  base.py  diffpair.py  enum.py  indexables.py  struct.py  tensor.py
copper/reflection/: __init__.py  base.py  function.py  resources.py  tensor.py  typeutil.py
copper/tests/: test_example.py
copper/types/: arithmetic.py  base.py  diffpair.py  enum.py  func.py  helpers.py  indexables.py  interfaces.py  resources.py  struct.py  tensor.py  typeutil.py
docs/: FUSION_VM_PROGRESS.md  api_order.json  autodiff.rst  broadcasting.rst  buffers.rst  changelog.rst  conf.py  firstfunctions.rst  generator_grid.rst  generator_ids.rst  generator_random.rst  generators.rst  index.rst  mapping.rst  nested.rst  pytorch.rst  releasenotes.rst  requirements.txt  tensorupdate.rst  textures.rst  typemethods.rst
docs/api/: bindings.rst  reflection.rst  slangpy.rst
docs/proposals/: torch_bridge_fallback.md
docs/src/: profiling.rst
examples/: CMakeLists.txt  README.md
examples/autodiff/: main.py
examples/broadcasting/: broken_sampler.py  example.slang  main.py
examples/buffers/: example.slang  main.py
examples/diff-splatting/: README.md  diffsplatting2d.slang  main.py
examples/first_function/: example.slang  main_numpy.py  main_scalar.py
examples/generators/: ids.slang  main_grid.py  main_ids.py  main_random.py
examples/imgui_bundle/: imgui_bundle_offscreen.py
examples/mapping/: example.slang  main.py
examples/nested/: example.slang  main.py
examples/pathtracer/: pathtracer.cpp  pathtracer.py  pathtracer.slang  tone_mapper.slang
examples/print/: print.py  print.slang
examples/pytorch/: example.slang  main.py
examples/ray-casting/: main.py  raycasting.slang
examples/render_pipeline/: render_pipeline.cpp  render_pipeline.slang
examples/signed_distance_field/: example.slang  main.py  (+1 more)
examples/wasm/: CMakeLists.txt  render_pipeline.html  simple_compute.html
experiments/: README.md
kernelfunctions/: __init__.py  buffer.py  calldata.py  callsignature.py  codegen.py  dispatchdata.py  function.py  gentree.py  instance.py  module.py  shapes.py  signaturenode.py  struct.py  tensor.slang  translation.py  typemappings.py  typeregistry.py  utils.py
plan/: phase1-external-deps.md  phase2-bitmap-mipmap.md  phase3-bc-codec.md  phase4-finalize.md  phase5-nvtt3.md  plan.md
sam-test/: call-id-test.py  call-id-test.slang  test_call_group_simple.slang  test_individual_call_group.py
slangpy/: __init__.py  calldata.py  dispatchdata.py  function.py  instance.py  shapes.py  struct.py  typeregistry.py  utils.py
src/slangpy_torch/: .gitignore  MANIFEST.in  PROGRESS.md  README.md  benchmark_native.py  pyproject.toml  setup.py  tensor_bridge_api.h  tensor_bridge_consumer.h  torch_bridge_impl.cpp
src/slangpy_torch_bridge/: README.md  benchmark_c_api.py  benchmark_native.cpp  benchmark_native.py  pyproject.toml  setup.py  tensor_bridge_api.h  tensor_bridge_consumer.h  tensor_info.h  test_bridge.py  torch_bridge.cpp  torch_bridge_impl.cpp
tests/: CMakeLists.txt  helpers.py  test_broadcast_rules.py  test_overload_matching.py  test_setup_chain.py  test_sgl.py  test_simple_function_call.py  test_simple_function_creation.py  test_vector_function_call.py
tools/: README_github.md  backfill_benchmarks.py  benchmark_actions.py  build_docs.py  build_metrics.py  ci.py  debug_reviews.py  demo_triggers.py  example-workflow.yml  fix_imports.py  fix_license.py  fix_version_numbers.py  generate_tensors.py  gh_approve.py  gh_helpers.py  gpu_clock.py  list_prs.py  local_precommit.py  postprocess_stub.py  test_api.py  test_approval_integration.py  test_ci_environment.py  test_ci_workflow.py  test_exit_codes.py  test_gh_approve.py  test_pr_detection.py  test_triggers.py  test_user_whitelist.py
(+972 files in other folders)
