[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelfunctions"
authors = [
    {name = "Chris Cummings", email = "chriscummings@nvidia.com"},
]
description = "Call compute kernel functions in SGL"
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools]
py-modules = ["kernelfunctions", "copper"]

[tool.pyright]
include = ["./kernelfunctions","./copper"]
extraPaths = ["./tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportMissingSuperCall  = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "warning"
