[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelfunctions"
authors = [
    {name = "Chris Cummings", email = "chriscummings@nvidia.com"},
    {name = "Benedikt Bitterli", email = "bbitterli@nvidia.com"}
]
description = "Easily call Slang functions and integrate with PyTorch auto diff directly from Python."
readme = "README.md"
requires-python = ">=3.9"
dynamic = ["version"]

[tool.setuptools]
py-modules = ["kernelfunctions"]

[tool.pyright]
include = ["./kernelfunctions"]
extraPaths = ["./tests"]
pythonVersion = "3.10"
typeCheckingMode = "basic"
reportUnusedImport = "error"
reportMissingSuperCall  = "error"
reportInvalidStringEscapeSequence = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "warning"

[tool.autopep8]
in-place = true
max-line-length = 90
#ignore:
# pep8 defaults
# E731: lambda->def
ignore = "E226,E24,W50,W690,E731"
